assets/css/style.scss
---
---

@import "{{ site.theme }}";

#index-header {
  margin: 0 0;
}

img {
  margin: 0 0 20px;
}

#avatar {
  // width: 100px;
  // height: 100px;
  border-radius: 50%;
  width: 100%;
  max-width: 300px;
  object-fit: cover;
  border: 4px solid #112a46;
}

body {
  background-color: #fff7ed;
  color: #112a46;
  font: 16px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

a:hover,
a:focus {
  color: #069;
  font-weight: normal;
  text-decoration: underline;
}

#footer-links {
  padding-inline-start: 0;
  list-style-type: none;
}

@media print, screen and (max-width: 960px) {
}

@media print, screen and (max-width: 720px) {
  #avatar {
    // centering img
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

@media print, screen and (max-width: 480px) {
}

